# utf8fx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLANNING.md  README.md  README.template.md  SECURITY.md  unicode-design-elements.md
.github/workflows/: ci.yml  release.yml  update-badges.yml
assets/: manifest.json
crates/badgefx/: Cargo.toml
crates/badgefx/src/: badge.rs  glyphs.rs  group.rs  lib.rs  license.rs  render.rs  shapes.rs  style.rs  version.rs
crates/badgefx/tests/: parity_test.rs
crates/mdfx/: Cargo.toml
crates/mdfx-cli/: Cargo.toml
crates/mdfx-cli/src/: lsp.rs  main.rs
crates/mdfx-cli/src/lsp/: code_actions.rs  color.rs  completions.rs  diagnostics.rs  handlers.rs  mod.rs  parser.rs  preview.rs  semantic_tokens.rs
crates/mdfx-colors/: Cargo.toml
crates/mdfx-colors/src/: lib.rs
crates/mdfx-fetch/: Cargo.toml
crates/mdfx-fetch/src/: cache.rs  error.rs  fetcher.rs  lib.rs  value.rs
crates/mdfx-fetch/src/sources/: actions.rs  codecov.rs  crates.rs  docker.rs  github.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pypi.rs  rubygems.rs
crates/mdfx-icons/: Cargo.toml
crates/mdfx-icons/src/: lib.rs
crates/mdfx/data/: components.json  registry.json  separators.json
crates/mdfx/src/: badges.rs  components.rs  config.rs  converter.rs  error.rs  frames.rs  lib.rs  manifest.rs  parser.rs  primitive.rs  registry.rs  separators.rs  shields.rs  styles.rs  targets.rs  test_utils.rs
crates/mdfx/src/components/: mod.rs  params.rs
crates/mdfx/src/components/handlers/: donut.rs  gauge.rs  github.rs  license.rs  mod.rs  progress.rs  rating.rs  row.rs  sparkline.rs  tech.rs  tech_group.rs  version.rs  waveform.rs
crates/mdfx/src/renderer/: hybrid.rs  mod.rs  plaintext.rs  shields.rs  svg.rs
crates/mdfx/src/renderer/svg/: donut.rs  gauge.rs  mod.rs  progress.rs  swatch.rs  tech.rs  utils.rs
crates/mdfx/src/renderer/svg/snapshots/: mdfx__renderer__svg__tests__donut_0_percent.snap  mdfx__renderer__svg__tests__donut_100_percent.snap  mdfx__renderer__svg__tests__donut_25_percent.snap  mdfx__renderer__svg__tests__donut_50_percent.snap  mdfx__renderer__svg__tests__donut_75_percent.snap  mdfx__renderer__svg__tests__donut_label_too_small.snap  mdfx__renderer__svg__tests__donut_large.snap  mdfx__renderer__svg__tests__donut_medium.snap  mdfx__renderer__svg__tests__donut_small.snap  mdfx__renderer__svg__tests__donut_thumb_with_border.snap  mdfx__renderer__svg__tests__donut_with_label.snap  mdfx__renderer__svg__tests__donut_with_thumb.snap  mdfx__renderer__svg__tests__gauge_0_percent.snap  mdfx__renderer__svg__tests__gauge_100_percent.snap  mdfx__renderer__svg__tests__gauge_25_percent.snap  mdfx__renderer__svg__tests__gauge_50_percent.snap  mdfx__renderer__svg__tests__gauge_75_percent.snap  mdfx__renderer__svg__tests__gauge_label_and_thumb.snap  mdfx__renderer__svg__tests__gauge_large.snap  mdfx__renderer__svg__tests__gauge_medium.snap  mdfx__renderer__svg__tests__gauge_small.snap  mdfx__renderer__svg__tests__gauge_thumb_with_border.snap  mdfx__renderer__svg__tests__gauge_with_label.snap  mdfx__renderer__svg__tests__gauge_with_thumb.snap  mdfx__renderer__svg__tests__progress_centered_fill.snap  mdfx__renderer__svg__tests__progress_label_too_small.snap  mdfx__renderer__svg__tests__progress_with_border.snap  mdfx__renderer__svg__tests__progress_with_label.snap  mdfx__renderer__svg__tests__slider_at_hundred.snap  mdfx__renderer__svg__tests__slider_at_zero.snap  mdfx__renderer__svg__tests__slider_circle_thumb.snap  mdfx__renderer__svg__tests__slider_custom_thumb_width.snap  mdfx__renderer__svg__tests__slider_diamond_thumb.snap  mdfx__renderer__svg__tests__slider_square_thumb.snap  mdfx__renderer__svg__tests__slider_with_thumb_border.snap  mdfx__renderer__svg__tests__slider_with_track_border.snap  mdfx__renderer__svg__tests__sparkline_area_chart.snap  mdfx__renderer__svg__tests__sparkline_area_with_dots.snap  mdfx__renderer__svg__tests__sparkline_bar_chart.snap  mdfx__renderer__svg__tests__sparkline_empty.snap  (+5 more)
data/: components.json  frames.json  styles.json
docs/: API-GUIDE.md  ARCHITECTURE.md  BADGE-CRATE-EXTRACTION.md  COMPONENTS.md  CONTEXTS.md  DESIGN.md  FRAMES-DESIGN.md  GITHUB-BLOCKS-PLAN.md  GLYPHS-GUIDE.md  GRID-PLAN.md  PLANNING.md  README.md  ROADMAP.md  ROW-PLAN.md  SNIPPETS-GUIDE.md  SPEC.md  STATE-MACHINE-GUIDE.md  TARGETS.md  TEMPLATE-SYNTAX.md  TEXT-STYLES-GUIDE.md  UNICODE-EXPLAINED.md  _coverpage.md  _sidebar.md  index.html  parser-design.md
docs/archive/: STATE-MACHINE-GUIDE.md
docs/examples/: NEON-TECH-SHOWCASE.md
docs/guides/: BADGES-GUIDE.md  CLI-GUIDE.md  COLORS-GUIDE.md  COMPONENTS-GUIDE.md  DONUT-GAUGE-GUIDE.md  DYNAMIC-BADGES-GUIDE.md  FRAMES-GUIDE.md  GLYPHS-GUIDE.md  LIVE-BADGES-GUIDE.md  LSP-GUIDE.md  PROGRESS-GUIDE.md  RATING-GUIDE.md  RATING-GUIDE.template.md  README.md  SPARKLINE-GUIDE.md  SPARKLINE-GUIDE.template.md  SWATCH-GUIDE.md  TECH-GUIDE.md  TEXT-STYLES-GUIDE.md  VERSION-LICENSE-GUIDE.md  VERSION-LICENSE-GUIDE.template.md  VSCODE-PUBLISHING.md  WAVEFORM-GUIDE.md
docs/guides/assets/tech-guide/: manifest.json
docs/plans/: DYNAMIC-BADGES-PLAN.md
editors/vscode/: .vscodeignore  README.md  extension.js  package.json
examples/: README.md  basic-usage.rs  border-test.md  border-test.template.md  dashboard-showcase.md  dashboard-showcase.template.md  donut-gallery.md  donuts-and-gauges-gallery-rendered.md  donuts-and-gauges-gallery.md  github-blocks.md  github-blocks.rendered.md  neon-tech-showcase-refactorv2.md  neon-tech-showcase.md  opus-creativity-showcase.md  opus-creativity-v2-shields.md  opus-creativity-v2-showcase.md  opus-creativity-v2.template.md  opus-creativity.template.md  progress-gallery-rendered.md  progress-gallery.md  simple-test.md  svg-creativity-showcase.md  svg-creativity.template.md  tech-badges.md  tech-badges.template.md  tech-showcase.template.md  test-svg.md  visual-showcase.md
examples/assets/: manifest.json
src/: components.rs  converter.rs  error.rs  lib.rs  parser.rs  primitive.rs  shields.rs  styles.rs
src/renderer/: mod.rs  shields.rs  svg.rs
(+6 files in other folders)
