[package]
name = "utf8fx"
version = "1.0.0"
edition = "2021"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
description = "Markdown preprocessor for artistic Unicode text - 19 styles with template syntax {{style}}text{{/style}}"
repository = "https://github.com/blackwell-systems/utf8fx"
license = "MIT"
keywords = ["unicode", "markdown", "text", "styling", "converter"]
categories = ["text-processing", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/blackwell-systems/utf8fx"
documentation = "https://docs.rs/utf8fx"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[lib]
name = "utf8fx"
path = "src/lib.rs"

[[bin]]
name = "utf8fx"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
