[package]
name = "badgefx"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = "Technology badge generation with SVG output - supports multiple styles, icons, and custom branding"
keywords = ["badges", "svg", "tech", "icons", "shields"]
categories = ["graphics", "multimedia::images", "web-programming"]

[features]
default = []
glyphs = []  # Include 500+ Unicode glyph mappings

[dependencies]
mdfx-colors = { version = "1.0", path = "../mdfx-colors" }
mdfx-icons = { version = "1.0", path = "../mdfx-icons" }

[dev-dependencies]
mdfx = { version = "1.0", path = "../mdfx" }
rstest = "0.23"