[package]
name = "mdfx-cli"
description = "CLI tool for mdfx: Transform markdown with Unicode text effects and UI components"
keywords = ["markdown", "unicode", "cli", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
lsp = ["tower-lsp", "tokio"]

[dependencies]
mdfx = { version = "1.0.0", path = "../mdfx" }
mdfx-icons = { version = "1.0.0", path = "../mdfx-icons" }
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.1"
serde_json = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
glob = "0.3"
regex = "1.10"
chrono = "0.4"

# LSP dependencies (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[[bin]]
name = "mdfx"
path = "src/main.rs"
