[package]
name = "mdfx-cli"
description = "CLI tool for mdfx: Transform markdown with Unicode text effects and UI components"
keywords = ["markdown", "unicode", "cli", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]
readme = "../../README.md"
documentation = "https://docs.rs/mdfx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = ["fetch"]
lsp = ["tower-lsp", "tokio", "once_cell", "base64", "badgefx"]
fetch = ["mdfx/fetch", "mdfx-fetch"]

[dependencies]
mdfx = { version = "1.0.0-rc.1", path = "../mdfx" }
mdfx-fetch = { version = "1.0.0-rc.1", path = "../mdfx-fetch", optional = true }
mdfx-icons = { version = "1.0.0-rc.1", path = "../mdfx-icons" }
badgefx = { version = "1.0.0-rc.1", path = "../badgefx", optional = true }
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.1"
serde_json = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
glob = "0.3"
regex = "1.10"
chrono = "0.4"

# LSP dependencies (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
once_cell = { version = "1.19", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
rstest = "0.23"

[[bin]]
name = "mdfx"
path = "src/main.rs"
