[package]
name = "mdfx-colors"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = "Color utilities for badge generation - luminance calculation, contrast detection, and hex parsing"
keywords = ["color", "luminance", "contrast", "hex", "badges"]
categories = ["graphics", "multimedia::color"]

[dependencies]

[dev-dependencies]
rstest = "0.23"