[package]
name = "mdfx-fetch"
description = "Data fetching for mdfx dynamic badges (GitHub, npm, crates.io, etc.)"
keywords = ["markdown", "badges", "github", "npm", "fetch"]
categories = ["web-programming::http-client", "caching"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
