[package]
name = "mdfx-icons"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = "Simple Icons library for badge generation - SVG paths and brand colors"
keywords = ["icons", "svg", "badges", "brands", "simple-icons"]
categories = ["graphics", "multimedia::images"]
readme = "../../README.md"
documentation = "https://docs.rs/mdfx-icons"

[dependencies]
mdfx-colors = { version = "1.0.0-rc.1", path = "../mdfx-colors" }

[dev-dependencies]
rstest = "0.23"