[package]
name = "mdfx"
description = "Markdown effects: Unicode text styling and UI components through template syntax"
keywords = ["markdown", "unicode", "preprocessor", "styling", "text-processing"]
categories = ["text-processing"]
readme = "../../README.md"
documentation = "https://docs.rs/mdfx"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
fetch = ["mdfx-fetch"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
unicode-segmentation = "1.11"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
badgefx = { version = "1.0.0-rc.1", path = "../badgefx" }
mdfx-icons = { version = "1.0.0-rc.1", path = "../mdfx-icons" }
mdfx-colors = { version = "1.0.0-rc.1", path = "../mdfx-colors" }
mdfx-fetch = { version = "1.0.0-rc.1", path = "../mdfx-fetch", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
insta = { version = "1.40", features = ["json", "redactions"] }
rstest = "0.23"

[lib]
name = "mdfx"
path = "src/lib.rs"
